# japan-news-etl

./: .env.example  .gitignore  Dockerfile.airflow  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.airflow.txt  requirements.txt  test.sh
api/: build.gradle  gradle.properties  settings.gradle
api/src/main/java/com/japannews/: JapanNewsApiApplication.java
api/src/main/java/com/japannews/controller/: QueryController.java
api/src/main/java/com/japannews/model/: NewsArticle.java  ParsedIntent.java  QueryRequest.java  QueryResponse.java
api/src/main/java/com/japannews/repository/: NewsArticleRepository.java
api/src/main/java/com/japannews/service/: IntentParserService.java  LlmService.java  QueryService.java
api/src/main/resources/: application.yml
api/src/test/java/com/japannews/: JapanNewsApiApplicationTests.java
api/src/test/java/com/japannews/controller/: QueryControllerTest.java
dags/: news_etl_dag.py
etl/: fetch.py  load.py  transform.py  validate.py
etl/tests/: test_transform.py
scripts/: check_llm_config.py  e2e_smoke.py  test_idempotency.py
sql/: init.sql
