[project]
name = "japan-news-etl"
version = "0.1.0"
description = "ETL pipeline for Japanese news ingestion with Airflow, PostgreSQL, and Redis."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "apache-airflow==2.8.0",
  "beautifulsoup4",
  "feedparser",
  "openai",
  "psycopg2-binary",
  "pytest",
  "python-dotenv",
  "redis",
  "requests",
]

[tool.uv]
package = false
